[tool.poetry]
name = "repl_python3_onlineshoppingproject"
version = "0.1.0"
description = ""
authors = ["DaNerdyDoggo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
requests-html = "^0.10.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
